Consolidated `MimeTypes` into `AppMimeTypes`. Added plan for other cleanup work